Update biography and links section in index.html

--- a/index.html
+++ b/index.html
@@ -84,17 +84,16 @@
         <h1>Akın Eker</h1>
         
         <p class="bio">
-            Hello! I'm a software developer, lifelong learner, and tech enthusiast.
-            I'm passionate about building clean, efficient applications.
-            Connect with me below!
+            Biography
         </p>
 
         <div class="links">
-            <a href="https://linkedin.com/in/your-username" class="linkedin">LinkedIn</a>
+            LINKS
+            <!-- <a href="https://linkedin.com/in/your-username" class="linkedin">LinkedIn</a>
             <a href="https://github.com/akineker" class="github">GitHub</a>
             <a href="https://twitter.com/your-username" class="twitter">Twitter / X</a>
             <a href="https://youtube.com/your-channel" class="youtube">YouTube</a>
-            <a href="https://your-portfolio.com">My Portfolio</a>
+            <a href="https://your-portfolio.com">My Portfolio</a> -->
         </div>
         
     </div>
