Revise introduction text on personal website

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </header>
 
         <p>
-            I am Akin, and this is my personal website. I use it to collect and share my work
+            This is my personal website. I use it to share my work
             on blockchain-of-things, consensus mechanisms, and scalable distributed systems.
             
         </p>
