--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                     Google Scholar
                 </a>
             </li>
-            <li class="sidebar-links__item">
+            <!-- <li class="sidebar-links__item">
                 <span class="icon"><i class="fa-brands fa-x-twitter"></i></span>
                 <a href="---" target="_blank" rel="noopener noreferrer">
                     Twitter (X)
                 </a>
-            </li>
+            </li> -->
             <li class="sidebar-links__item">
                 <img src="assets/img/hashnode-icon.png" alt="Hashnode" class="icon-image">
                 <a href="---" target="_blank" rel="noopener noreferrer">
@@ -94,17 +94,16 @@
         </header>
 
         <p>
-            This is my personal website. I use it to share my work
-            on blockchain-of-things, consensus mechanisms, and scalable distributed systems.
+            I am Akin, and this is my personal website. I use it to share my work on Blockchain-of-Things (BoT), consensus mechanisms, and scalable distributed systems.
             
         </p>
         <p>   
-            I am about to graduate from the joint Ph.D. programme at University of Bristol under the supervision of Prof Theo Tryfonas and Prof George Oikonomou.
+            I am about to graduate from the joint Ph.D. programme at University of Bristol under the supervision of  <a href="https://www.bristol.ac.uk/people/person/Theo-Tryfonas-d874008b-811f-406e-b9f4-650693d37b6e/" target="_blank" rel="noopener noreferrer">Prof Theo Tryfonas </a>and <a href="https://www.bristol.ac.uk/people/person/George-Oikonomou-0fda9c54-8e62-4aa7-8ce3-7713345bd3bc/" target="_blank" rel="noopener noreferrer">Prof George Oikonomou</a>.
             
             PhD Thesis: 
         </p>
         <p>   
-            Before that, I was a MSc Computer Science student at University of Southampton supervised by Dr Leonardo Aniello.
+            Before that, I was a MSc Computer Science student at University of Southampton supervised by <a href="https://www.southampton.ac.uk/people/5xljs2/doctor-leonardo-aniello" target="_blank" rel="noopener noreferrer">Dr Leonardo Aniello</a>.
 
             Master Thesis:
         </p>
@@ -113,11 +112,24 @@
 
         <ul class="sections-list">
             <li>
-                <p>Selected Publications <span class="icon">🔗</span></p>
+                <p>Selected Publications</p>
                     <ul>
                         <li>
+                            <span class="icon"><i class="fa-regular fa-clipboard"></i></span>
                             <a href="---" target="_blank" rel="noopener noreferrer">
-                                Publication-1
+                                Up-to-Date Blockchain Review (Link will be available soon)
+                            </a>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa-regular fa-clipboard"></i></span>
+                            <a href="---" target="_blank" rel="noopener noreferrer">
+                                Consensus Algorithms Taxonomy Analysis (Link will be available soon)
+                            </a>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa-regular fa-clipboard"></i></span>
+                            <a href="https://ieeexplore.ieee.org/document/10619067" target="_blank" rel="noopener noreferrer">
+                                FlexBoT: A Unifying and Scaling Blockchain-of-Things (BoT) Architecture
                             </a>
                         </li>
                     </ul>
@@ -125,6 +137,20 @@
             <li>
                 <p>
                     Technical Reports:
+                    <ul>
+                        <li>
+                            <span class="icon"><i class="fa-regular fa-file-lines"></i></span>
+                            <a href="---" target="_blank" rel="noopener noreferrer">
+                                Report-1 (Link will be available soon)
+                            </a>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa-regular fa-file-lines"></i></span>
+                            <a href="---" target="_blank" rel="noopener noreferrer">
+                                Report-2 (Link will be available soon)
+                            </a>
+                        </li>
+                    </ul>
                 </p>
             </li>
             <li>
@@ -134,13 +160,13 @@
                         <li>
                             <span><i class="fa-solid fa-pen-alt"></i></span>
                             <a href="---" target="_blank" rel="noopener noreferrer">
-                                Zero-Knowledge Proofs
+                                Zero-Knowledge Proofs (Link will be available soon)
                             </a>
                         </li>
                         <li>
                             <span><i class="fa-solid fa-pen-alt"></i></span>
                             <a href="---" target="_blank" rel="noopener noreferrer">
-                                Another Blog
+                                Building ZKP-Layer 2 Rollup Simulation on Ethereum Sepholia Test Network (Link will be available soon)
                             </a>
                         </li>
                     </ul>
@@ -152,7 +178,7 @@
                     <!-- <span class="icon"><i class="fa-solid fa-id-badge"></i></span>
                     <span class="icon"><i class="fa-regular fa-clipboard"></i></span> -->
                     <a href="---" target="_blank" rel="noopener noreferrer">
-                        Academic CV
+                        Academic CV (Link will be available soon)
                     </a>
                 </p>
             </li>
