Updated HTML content and refresh links across the site

--- a/index.html
+++ b/index.html
@@ -94,21 +94,27 @@
         </header>
 
         <p>
-            I am Akin, and this is my personal website. I use it to share my work on Blockchain-of-Things (BoT), consensus mechanisms, and scalable distributed systems.
+            I am Akin, and this is my personal website, where I share my work on Blockchain-of-Things (BoT), consensus mechanisms, and scalable distributed systems.
             
         </p>
         <p>   
-            I am about to graduate from the joint Ph.D. programme at University of Bristol under the supervision of  <a href="https://www.bristol.ac.uk/people/person/Theo-Tryfonas-d874008b-811f-406e-b9f4-650693d37b6e/" target="_blank" rel="noopener noreferrer">Prof Theo Tryfonas </a>and <a href="https://www.bristol.ac.uk/people/person/George-Oikonomou-0fda9c54-8e62-4aa7-8ce3-7713345bd3bc/" target="_blank" rel="noopener noreferrer">Prof George Oikonomou</a>.
+            I am completing a joint PhD programme at the University of Bristol, supervised by <a href="https://www.bristol.ac.uk/people/person/Theo-Tryfonas-d874008b-811f-406e-b9f4-650693d37b6e/" target="_blank" rel="noopener noreferrer">Prof Theo Tryfonas </a>and <a href="https://www.bristol.ac.uk/people/person/George-Oikonomou-0fda9c54-8e62-4aa7-8ce3-7713345bd3bc/" target="_blank" rel="noopener noreferrer">Prof George Oikonomou</a>.
             
-            PhD Thesis: 
+            <p>
+                &nbsp &nbsp
+                PhD Thesis: Blockchain-of-Things (BoT)
+            </p>
         </p>
         <p>   
-            Before that, I was a MSc Computer Science student at University of Southampton supervised by <a href="https://www.southampton.ac.uk/people/5xljs2/doctor-leonardo-aniello" target="_blank" rel="noopener noreferrer">Dr Leonardo Aniello</a>.
+            Prior to this, I completed an MSc in Computer Science at the University of Southampton supervised by <a href="https://www.southampton.ac.uk/people/5xljs2/doctor-leonardo-aniello" target="_blank" rel="noopener noreferrer">Dr Leonardo Aniello</a>.
 
-            Master Thesis:
+            <p>
+                &nbsp &nbsp
+                MSc Thesis: Recognising and Detecting Activities in ADL Datasets Using AI
+            </p>
         </p>
 
-        <p>Here is a brief description of what you can find on this site:</p>
+        <p class="sub-header">Links and Resources:</p>
 
         <ul class="sections-list">
             <li>
