--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
                     Twitter (X)
                 </a>
             </li> -->
-            <li class="sidebar-links__item">
-                <img src="assets/img/hashnode-icon-gray.png" alt="Hashnode" class="icon-image">
+            <li class="sidebar-links__item>
+                <span class="icon">
+                    <img src="assets/img/hashnode-icon-gray.png" alt="Hashnode" class="icon-image hashnode-icon"></img>
+                </span>
                 <a href="---" target="_blank" rel="noopener noreferrer">
-                    HashNode - Blogs
+                    HashNode
                 </a>
             </li>
         </ul>
@@ -98,7 +100,7 @@
             
         </p>
         <p>   
-            I am completing a joint PhD programme at the University of Bristol, supervised by <a href="https://www.bristol.ac.uk/people/person/Theo-Tryfonas-d874008b-811f-406e-b9f4-650693d37b6e/" target="_blank" rel="noopener noreferrer">Prof Theo Tryfonas </a>and <a href="https://www.bristol.ac.uk/people/person/George-Oikonomou-0fda9c54-8e62-4aa7-8ce3-7713345bd3bc/" target="_blank" rel="noopener noreferrer">Prof George Oikonomou</a>.
+            I am completing a PhD programme at the University of Bristol, supervised by <a href="https://www.bristol.ac.uk/people/person/Theo-Tryfonas-d874008b-811f-406e-b9f4-650693d37b6e/" target="_blank" rel="noopener noreferrer">Prof Theo Tryfonas </a>and <a href="https://www.bristol.ac.uk/people/person/George-Oikonomou-0fda9c54-8e62-4aa7-8ce3-7713345bd3bc/" target="_blank" rel="noopener noreferrer">Prof George Oikonomou</a>.
             
             <p>
                 &nbsp &nbsp
