ZeroPointTwo blog section and fix external links

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
                     ORCID
                 </a>
             </li>
-            <li class="sidebar-links__item">
+            <!-- GOOGLE SCHOLAR -->
+            <!-- <li class="sidebar-links__item">
                 <span class="icon"><i class="fa-solid fa-graduation-cap"></i></span>
                 <a href="---" target="_blank" rel="noopener noreferrer">
                     Google Scholar
                 </a>
-            </li>
+            </li> -->
+
             <!-- <li class="sidebar-links__item">
                 <span class="icon"><i class="fa-brands fa-x-twitter"></i></span>
                 <a href="---" target="_blank" rel="noopener noreferrer">
@@ -76,7 +78,7 @@
                 <span class="icon">
                     <img src="assets/img/hashnode-icon-gray.png" alt="Hashnode" class="icon-image hashnode-icon"></img>
                 </span>
-                <a href="---" target="_blank" rel="noopener noreferrer">
+                <a href="https://hashnode.com/@akineker" target="_blank" rel="noopener noreferrer">
                     HashNode
                 </a>
             </li>
@@ -104,7 +106,7 @@
             
             <p>
                 &nbsp &nbsp
-                PhD Thesis: Blockchain-of-Things (BoT)
+                <strong>PhD Thesis:</strong> Blockchain-of-Things (BoT)
             </p>
         </p>
         <p>   
@@ -112,7 +114,7 @@
 
             <p>
                 &nbsp &nbsp
-                MSc Thesis: Recognising and Detecting Activities in ADL Datasets Using AI
+                <strong>MSc Thesis:</strong> Recognising and Detecting Activities in ADL Datasets Using AI
             </p>
         </p>
 
@@ -144,39 +146,32 @@
             </li>
             <li>
                 <p>
-                    Technical Reports:
-                    <ul>
-                        <li>
-                            <span class="icon"><i class="fa-regular fa-file-lines"></i></span>
-                            <a href="---" target="_blank" rel="noopener noreferrer">
-                                Report-1 (Link will be available soon)
-                            </a>
-                        </li>
-                        <li>
-                            <span class="icon"><i class="fa-regular fa-file-lines"></i></span>
-                            <a href="---" target="_blank" rel="noopener noreferrer">
-                                Report-2 (Link will be available soon)
-                            </a>
-                        </li>
-                    </ul>
-                </p>
-            </li>
-            <li>
-                <p>
-                        Lecture Notes & Tutorials (on HashNode)
+                        Technical Reports & Tutorials (on HashNode)
                     <ul>
                         <li>
                             <span><i class="fa-solid fa-pen-alt"></i></span>
-                            <a href="---" target="_blank" rel="noopener noreferrer">
-                                Zero-Knowledge Proofs (Link will be available soon)
+                            <a href="https://zeropointtwo.hashnode.dev/" target="_blank" rel="noopener noreferrer">
+                                ZeroPointTwo: Technical Reports & ZK Rollup Tutorials
                             </a>
+                                <p>
+                                    <strong>ZeroPointTwo</strong> is a research-oriented blog where academic exploration meets practical engineering. 
+                                    It covers zero-knowledge rollups, Layer-2 scalability, and modular blockchain design, alongside personal projects 
+                                    such as <strong>EduRoll</strong>, hands-on builds, and experimental deployments.
+                                    </p>
+
+                                    <p>
+                                    The first featured project, <strong>EduRoll</strong> 
+                                    (<a href="https://github.com/akineker/EduRoll/tree/main" target="_blank">GitHub repository</a>), 
+                                    introduces a zk-rollup architecture for decentralised tuition payments. It includes circuit design experiments and 
+                                    on-chain validation using the Ethereum Sepolia test network.
+                                    </p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <span><i class="fa-solid fa-pen-alt"></i></span>
                             <a href="---" target="_blank" rel="noopener noreferrer">
                                 Building ZKP-Layer 2 Rollup Simulation on Ethereum Sepholia Test Network (Link will be available soon)
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </p>
             </li>
