Update profile photo and CV with some layout adjustments.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <!-- LEFT SIDEBAR -->
     <aside class="sidebar">
-        <img src="assets/img/profile.png" alt="Profile Image" class="avatar">
+        <img src="assets/img/profile_photo.jpg" alt="Profile Image" class="avatar">
 
         <h1 class="name">Akin Eker</h1>
-        <p class="role">Blockchain, Distributed Systems &amp; Consensus Protocol  Researcher</p>
+        <p class="role">Blockchain, Distributed Systems & ZKP / Consensus Protocol Researcher</p>
 
         <ul class="sidebar-links">
             <li class="sidebar-links__item">
@@ -74,9 +74,9 @@
                     Twitter (X)
                 </a>
             </li> -->
-            <li class="sidebar-links__item>
+            <li class="sidebar-links__item">
                 <span class="icon">
-                    <img src="assets/img/hashnode-icon-gray.png" alt="Hashnode" class="icon-image hashnode-icon"></img>
+                    <img src="assets/logo/hashnode-icon-gray.png" alt="Hashnode" class="icon-image hashnode-icon"></img>
                 </span>
                 <a href="https://hashnode.com/@akineker" target="_blank" rel="noopener noreferrer">
                     HashNode
@@ -180,8 +180,8 @@
                     <span class="icon"><i class="fa-regular fa-address-card"></i></span>
                     <!-- <span class="icon"><i class="fa-solid fa-id-badge"></i></span>
                     <span class="icon"><i class="fa-regular fa-clipboard"></i></span> -->
-                    <a href="---" target="_blank" rel="noopener noreferrer">
-                        Academic CV (Link will be available soon)
+                    <a href="./assets/doc/akineker-cv.pdf" target="_blank" rel="noopener noreferrer">
+                        Academic CV
                     </a>
                 </p>
             </li>
