--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
                 <span>Bristol, UK</span>
             </li>
-            <li class="sidebar-links__item">
+            <!-- <li class="sidebar-links__item">
                 <span class="icon"><i class="fa-regular fa-envelope"></i></span>
                 <a href="mailto:akin.eker@bristol.ac.uk">Email</a>
-            </li>
+            </li> -->
             <li class="sidebar-links__item">
                 <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
                 <a href="https://www.linkedin.com/in/akin-eker/" target="_blank" rel="noopener noreferrer">
@@ -122,6 +122,16 @@
 
         <ul class="sections-list">
             <li>
+                <p>
+                    <span class="icon"><i class="fa-regular fa-address-card"></i></span>
+                    <!-- <span class="icon"><i class="fa-solid fa-id-badge"></i></span>
+                    <span class="icon"><i class="fa-regular fa-clipboard"></i></span> -->
+                    <a href="./assets/doc/akineker-cv.pdf" target="_blank" rel="noopener noreferrer">
+                        Academic CV
+                    </a>
+                </p>
+            </li>
+            <li>
                 <p>Selected Publications</p>
                     <ul>
                         <li>
@@ -133,7 +143,7 @@
                         <li>
                             <span class="icon"><i class="fa-regular fa-clipboard"></i></span>
                             <a href="---" target="_blank" rel="noopener noreferrer">
-                                Consensus Algorithms Taxonomy Analysis (Link will be available soon)
+                                Consensus Algorithms Analysis (Link will be available soon)
                             </a>
                         </li>
                         <li>
@@ -173,16 +183,6 @@
                             </a>
                         </li> -->
                     </ul>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <span class="icon"><i class="fa-regular fa-address-card"></i></span>
-                    <!-- <span class="icon"><i class="fa-solid fa-id-badge"></i></span>
-                    <span class="icon"><i class="fa-regular fa-clipboard"></i></span> -->
-                    <a href="./assets/doc/akineker-cv.pdf" target="_blank" rel="noopener noreferrer">
-                        Academic CV
-                    </a>
                 </p>
             </li>
         </ul>
