--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
         </p>
         <p>   
-            I am completing a PhD programme at the University of Bristol, supervised by <a href="https://www.bristol.ac.uk/people/person/Theo-Tryfonas-d874008b-811f-406e-b9f4-650693d37b6e/" target="_blank" rel="noopener noreferrer">Prof Theo Tryfonas </a>and <a href="https://www.bristol.ac.uk/people/person/George-Oikonomou-0fda9c54-8e62-4aa7-8ce3-7713345bd3bc/" target="_blank" rel="noopener noreferrer">Prof George Oikonomou</a>.
+            I am completing a PhD programme at the <strong>University of Bristol</strong>, supervised by <a href="https://www.bristol.ac.uk/people/person/Theo-Tryfonas-d874008b-811f-406e-b9f4-650693d37b6e/" target="_blank" rel="noopener noreferrer">Prof Theo Tryfonas </a>and <a href="https://www.bristol.ac.uk/people/person/George-Oikonomou-0fda9c54-8e62-4aa7-8ce3-7713345bd3bc/" target="_blank" rel="noopener noreferrer">Prof George Oikonomou</a>.
             
             <p>
                 &nbsp &nbsp
@@ -110,7 +110,7 @@
             </p>
         </p>
         <p>   
-            Prior to this, I completed an MSc in Computer Science at the University of Southampton supervised by <a href="https://www.southampton.ac.uk/people/5xljs2/doctor-leonardo-aniello" target="_blank" rel="noopener noreferrer">Dr Leonardo Aniello</a>.
+            Prior to this, I completed an MSc in Computer Science at the <strong>University of Southampton</strong> supervised by <a href="https://www.southampton.ac.uk/people/5xljs2/doctor-leonardo-aniello" target="_blank" rel="noopener noreferrer">Dr Leonardo Aniello</a>.
 
             <p>
                 &nbsp &nbsp
