--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                         <li>
                             <span class="icon"><i class="fa-regular fa-clipboard"></i></span>
                             <a href="---" target="_blank" rel="noopener noreferrer">
-                                Up-to-Date Blockchain Review (Link will be available soon)
+                                Blockchain-of-Things (BoT): A Layered Architecture and Performance Evaluation for Scalable IoT Environments (Link will be available soon)
                             </a>
                         </li>
                         <li>
                             <span class="icon"><i class="fa-regular fa-clipboard"></i></span>
                             <a href="---" target="_blank" rel="noopener noreferrer">
-                                Consensus Algorithms Analysis (Link will be available soon)
+                                A Taxonomy and Comparative Analysis of Blockchain Consensus Protocols: Security, Scalability, and the Trilemma (Link will be available soon)
                             </a>
                         </li>
                         <li>
