--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akin Eker – Personal Website</title>
     <meta name="description" content="Personal website of Akin Eker – blockchain-of-things, consensus, and distributed systems research.">
+    <link rel="icon" type="image/png" href="assets/logo/logo_eye_small.png">  
     <link rel="stylesheet" href="css/style.css">
 
     <!-- SPECIAL FONTS  -->
@@ -25,7 +26,7 @@
         <img src="assets/img/profile_photo.jpg" alt="Profile Image" class="avatar">
 
         <h1 class="name">Akin Eker</h1>
-        <p class="role">Blockchain, Distributed Systems & ZKP / Consensus Protocol Researcher</p>
+        <p class="role">Applied Blockchain Researcher - Distributed Systems & ZKP / Consensus Protocol</p>
 
         <ul class="sidebar-links">
             <li class="sidebar-links__item">
